# cplusplus

KOTradeEngineSuits/: FXTradeEngineMain.cpp  FXTradeEngineMainMultiBook.cpp  Makefile  SignalSimulatorMain.cpp  TradeEngineMain.cpp  statsGeneratorMain.cpp
KOTradeEngineSuits/DataPrinter/: DataPrinter.cpp  DataPrinter.h
KOTradeEngineSuits/DataRecorder/: DataRecorder.cpp  DataRecorder.h
KOTradeEngineSuits/EngineInfra/: ContractAccount.cpp  ContractAccount.h  DataRecorderConfig.cpp  DataRecorderConfig.h  EngineEvent.cpp  EngineEvent.h  ErrorHandler.cpp  ErrorHandler.h  FigureEvent.cpp  FigureExecutionEvent.cpp  FigureExecutionEvent.h  Figures.h  HCFXScheduler.cpp  HCFXScheduler.h  HCFXSchedulerMultiBook.cpp.org  HCFXSchedulerMultiBook.h  HCScheduler.cpp.org  HCScheduler.h.org  HistoricDataRegister.cpp  HistoricDataRegister.h  KOEpochTime.cpp  KOEpochTime.h  KOFXModelFactory.h  KOFXModelFactoryMultiBook.h  KOModelFactory.h  KOOrder.cpp  KOOrder.h  KOScheduler.cpp  KOScheduler.h  OrderParentInterface.h  PriceUpdateEvent.cpp  PriceUpdateEvent.h  QuickFixScheduler.cpp  QuickFixScheduler.h  QuickFixSchedulerFXMultiBook.cpp  QuickFixSchedulerFXMultiBook.cpp.org  QuickFixSchedulerFXMultiBook.h  (+22 more)
OLD/: hc_cmake.sh
OLD/KOTradeEngine/EngineInfra/: CMakeLists.txt  ContractAccount.cpp  ContractAccount.h  EngineEvent.cpp  EngineEvent.h  ErrorHandler.cpp  ErrorHandler.h  FigureEvent.cpp  FigureEvent.h  Figures.h  HCScheduler.cpp  HCScheduler.h  HistoricDataRegister.cpp  HistoricDataRegister.h  Jamfile  KOEpochTime.h  KOOrder.cpp  KOOrder.h  KOScheduler.cpp  KOScheduler.h  OrderConfirmEvent.cpp  OrderConfirmEvent.h  OrderParentInterface.h  OrderRiskChecker.cpp  OrderRiskChecker.h  PositionServerConnection.cpp  PositionServerConnection.h  QuoteData.h  SchedulerBase.cpp  SchedulerBase.h  SchedulerConfig.cpp  SchedulerConfig.h  SimPositionServer.cpp  SimPositionServer.h  SimpleLogger.cpp  SimulationExchange.cpp  SimulationExchange.h  StaticDataHandler.cpp  StaticDataHandler.h  SystemClock.cpp  (+6 more)
OLD/KOTradeEngine/SLBase/: CMakeLists.txt  Jamfile  SLBase.cpp  SLBase.h
OLD/KOTradeEngine/base/: CMakeLists.txt  EXMA.cpp  EXMA.h  FairValueExecution.h  HedgeOrder.cpp  HedgeOrder.h  IOCOrder.cpp  IOCOrder.h  Instrument.cpp  Instrument.h  Jamfile  MultiProductPricingBase.h  Product.cpp  Product.h  QuoteOrder.cpp  QuoteOrder.h  SMA.cpp  SMA.h  Stdev.h  SyntheticSpread.cpp  WABSPricing.cpp  WeightedStdev.cpp  WeightedStdev.h
fxstr_dataconverter/: Main.cpp  Makefile
overnight/: ExecutorSim.cpp  ExecutorSim.h  KOScheduler.cpp  QuoteData.h  SLBase.cpp  SLBase.h  SLSL.cpp  SchedulerBase.cpp  SchedulerBase.h  SignalSimulatorMain.cpp  TradeSignalMerger.cpp
rth_dataconverter/: Main.cpp  Makefile
txmerger/: Main.cpp  Makefile
(+85 files in other folders)
